tests/success/variasVar.tds
integer x,y,z;
bool esMayor;
integer acum;
bool min,max;

void main(){
    return;
}