tests/fail/test-neg-varsAfterMeth.tds
bool b;
bool isNeg(integer x){
  return false;
}
integer y;